test/functional/Sema/return_last.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

// ----------------------- Set return type -------------------------------------
// CHECK: 7:1: error: Function 'returnString_missing' does not end with a return statement
func returnString_missing() -> *Char {
}

// CHECK-NOT: error
func returnString_ok() -> *Char {
    return "aaa";
}

// CHECK: 16:1: error: Function 'returnString_declOnly_missing' does not end with a return statement
func returnString_declOnly_missing() -> *Char {
    let a = "a";
    a;
}


// CHECK-NOT: error
func returnString_declAndReturn_ok() -> *Char {
    let a = "a";
    a;
    return "aaa";
}

// CHECK-NOT: error
func correct(cond: Bool) -> Int {
  if cond {
    return 1;
  } else {
    return 0;
  }
}

// ----------------------- Not Set return type -------------------------------------
// CHECK-NOT: error
func returnVoid_empty_ok() {
}

// CHECK-NOT: error
func returnVoid_declOnly_ok() -> Void {
    let b = "b";
    b;
}

// CHECK-NOT: error
func returnVoid_declAndExplicitReturn_ok() -> Void {
    let b = "b";
    b;
    return;
}

// CHECK: 2 error(s)

// ----------------------- ??? -------------------------------------
// func ccc(flag: Bool) -> String {
//     if flag {
//         return "if with return";
//     } else {
//         return "else with return";
//     }
// }
